--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -7,6 +7,12 @@
     <%= f.label :description %><br />
     <%= f.text_field :description %>
   </p>
+
+  <p>
+    <%= f.label :duration %><br />
+    <%= datetime_select :task, :duration, :discard_year=>true, :discard_month=>true, :discard_day=>true %>
+  </p>
+  
   <p>
     <%= f.submit 'Create' %>
   </p>
