--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -15,6 +15,7 @@
     <td><%=h task.owner %></td>
     <td><%=h task.is_finished %></td>
     <td><%= link_to 'Show', task %></td>
+ 		<td><%= link_to 'Start', start_task_path %></td>
     <td><%= link_to 'Edit', edit_task_path(task) %></td>
     <td><%= link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
