--- a/app/views/tasks/start.html.erb
+++ b/app/views/tasks/start.html.erb
@@ -1,1 +1,6 @@
-<h1>This is the start page</h1>
+<p>
+  <b>This is the start page for:</b>
+  <%=h @task.description %>
+</p>
+
+<%= link_to 'Back', tasks_path %>
