--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -22,6 +22,7 @@
         <%= link_to 'Start', start_task_path %>  
       <% end %>  
     </td>  
+    <td><%= link_to 'Add time', add_time_path(task) %></td>
     <td><%= link_to 'Show', task %></td>
     <td><%= link_to 'Edit', edit_task_path(task) %></td>
     <td><%= link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete %></td>
