--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,12 +12,12 @@
 <% @tasks.each do |task| %>
   <tr>
     <td><%=h task.description %></td>
-    <td><%=h task.duration.strftime('%I:%M') %></td>
+    <td><%=h task.duration %></td>
     <td><%=h task.user_id %></td>
     <td><%=h task.is_finished %></td>
     <td>  
       <% if task.started_at %>  
-        <%= Time.at(task.duration - Time.at(Time.now - task.started_at) - 9.hours).strftime('%H:%M') %> 
+        <%= task.duration %> 
       <% else %>  
 				<%= link_to 'Start', {:action => "start", :task_id => task.id} %>  
       <% end %>  
