Lame attempt to add a complete task button to start page.

--- a/app/views/tasks/start.html.erb
+++ b/app/views/tasks/start.html.erb
@@ -3,4 +3,8 @@
   <%=h @task.description %>
 </p>
 
+<p>
+  <%= button_to "Complete Task", { :action => :update, :id => @task.id, :is_finished => true } %>
+</p>
+
 <%= link_to 'Back', tasks_path %>
