--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -23,9 +23,9 @@
       <% end %>  
     </td>  
     <td><%= link_to 'Add time', add_time_path(task) %></td>
-    <td><%= link_to 'Show', task %></td>
     <td><%= link_to 'Edit', edit_task_path(task) %></td>
     <td><%= link_to 'Delete', task, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= check_box_tag 'finished' %></td>
   </tr>
 <% end %>
 </table>
