Added options after failing to finish a task.

--- a/app/views/tasks/fail.html.erb
+++ b/app/views/tasks/fail.html.erb
@@ -1,3 +1,10 @@
 <p>
   <b>ZOMG! you failed to complete the task!</b>
 </p>
+<p>
+  You should try one of the following actions:
+</p>
+<ul>
+  <li>Break it down</li>
+  <li>Add more time</li>
+</ul>
