--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,11 +1,11 @@
-
 <script type="text/javascript">
-function startTimer(elementId) {   
-   new Ajax.PeriodicalUpdater(elementId, '/tasks/time_left/' + elementId.charAt(elementId.length - 1), {
-     method: 'get', frequency: 30, decay: 1
-   });
+function startTimer(elementID) {
+  new Ajax.PeriodicalUpdater(elementID, '/tasks/time_left/' + elementID.substring(5).toString(), {
+    method: 'get', frequency: 30, decay: 1
+  });
 }
 </script>
+Note to self: when timer <= 0, redirect user to /tasks/fail
 
 <h1>Listing tasks</h1>
 
@@ -26,12 +26,14 @@ function startTimer(elementId) {
     <td><%=h task.is_finished %></td>
     <td>  
       <% if task.started_at %>  
-        <div id="timer<%=h task.id %>"><%= task.duration - Time.at(Time.now - task.started_at.to_time).min %></div>
-        <script type="text/javascript">startTimer("timer" + <%=h task.id %>);</script>
-      <% else %>  
-        <%= link_to 'Start', {:action => "start", :task_id => task.id} %>  
-      <% end %>  
-    </td>  
+        <div id="timer<%=h task.id %>">
+          <%= task.duration - Time.at(Time.now - task.started_at.to_time).min %>
+        </div>
+        <script type="text/javascript">startTimer('<%=h "timer" + task.id.to_s %>');</script>
+      <% else %>
+        <%= link_to 'Start', {:action => "start", :task_id => task.id} %>
+      <% end %>
+    </td>
     <td><%= link_to 'Add time', add_time_path(task) %></td>
     <td><%= link_to 'Edit', edit_task_path(task) %></td>
     <td><%= link_to 'Delete', task, :confirm => 'Are you sure?', :method => :delete %></td>
@@ -43,4 +45,3 @@ function startTimer(elementId) {
 <br />
 
 <%= link_to 'New task', new_task_path %>
-
