Redirect to /tasks/fail when timer runs out.  Still need to fix Ajax.PeriodicalUpdater.

--- a/app/views/tasks/fail.html.erb
+++ b/app/views/tasks/fail.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <b>ZOMG! you failed to complete the task!</b>
+  <b>ZOMG!  You failed to complete the task!</b>
 </p>
 <p>
   You should try one of the following actions:
