--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -41,6 +41,7 @@
     <th>Owner</th>
     <th>Is finished</th>
     <th>Time left</th>
+    <th>Add time</th>
   </tr>
 
 <% @tasks.each do |task| %>
@@ -64,6 +65,7 @@
         <%= link_to 'Start', {:action => "start", :task_id => task.id} %>
       <% end %>
     </td>
+    <td><%= link_to 'Add time', add_time_path(task) %></td>
     <td><%= link_to 'Edit', edit_task_path(task) %></td>
     <td><%= link_to 'Delete', task, :confirm => 'Are you sure?', :method => :delete %></td>
     <td><input id="checkbox<%= task.id %>" type="checkbox" onclick="checkOff(<%=task.id%>)" <%= 'checked' if task.is_finished %>" /></td>
