--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -32,8 +32,12 @@
 .done { text-decoration: line-through; color: #999; }
 </style>
 
-<h1>Listing tasks</h1>
+<h1>
+  <%= image_tag "turtle.gif" %>
+  Constant Win
+</h1>
 
+<div id="table_container">
 <table id="tasksTable">
   <tr>
     <th>Description</th>
@@ -49,7 +53,13 @@
     <td <%= 'class = "done"' if task.is_finished %>><%=h task.description %></td>
     <td><%=h task.duration %></td>
     <td><%=h task.user_id %></td>
-    <td><%=h task.is_finished %></td>
+    <td>
+      <% if task.is_finished %>
+        <div id="task_done"><br/></div>
+      <% else %>
+        <div id="task_not_done"><br/></div>
+      <% end %>
+    </td>
     <td>  
       <% if task.started_at %>  
         <% if task.duration - Time.at(Time.now - task.started_at.to_time).min > 0 %>
@@ -76,3 +86,4 @@
 <br />
 
 <%= link_to 'New task', new_task_path %>
+</div>
