--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -43,7 +43,7 @@
     <th>Description</th>
     <th>Duration</th>
     <th>Owner</th>
-    <th>Is finished</th>
+    <th>Finished?</th>
     <th>Time left</th>
     <th>Add time</th>
   </tr>
