--- a/app/views/layouts/tasks.html.erb
+++ b/app/views/layouts/tasks.html.erb
@@ -9,6 +9,7 @@
   <%= javascript_include_tag :defaults -%>
 </head>
 <body>
+<link href='http://fonts.googleapis.com/css?family=Droid+Sans&subset=latin' rel='stylesheet' type='text/css'>
 
 <p style="color: green"><%= notice %></p>
 
