--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,7 +1,7 @@
-body { background-color: #fff; color: #333; margin:0px;}
+body { background-color: #fff; color: #333; margin:0px; }
 
 body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Droid Sans',verdana, arial, helvetica, sans-serif;
   font-size:   13px;
   line-height: 18px;
   background:#A9F16C;
@@ -16,7 +16,8 @@ table {
 }
 
 div#table_container {
-  padding-left:25%;
+  margin-left:22%;
+  margin-right:22%;
 }
 
 div#task_done {
