--- a/app/views/tasks/start.html.erb
+++ b/app/views/tasks/start.html.erb
@@ -1,5 +1,7 @@
+<h1>Let's start a task!</h1>
+<div id="table_container">
 <p>
-  <b>This is the start page for:</b>
+  <b>Task to start:</b>
   <%=h @task.description %>
 </p>
 
@@ -15,3 +17,4 @@
 <% end %>
 
 <%= link_to 'Back', tasks_path %>
+</div>
