--- a/app/views/tasks/add_time.html.erb
+++ b/app/views/tasks/add_time.html.erb
@@ -1,3 +1,5 @@
+<h1>Add some time!</h1>
+<div id="table_container">
 <p>How much time would YOU like to add?</p>
 
 <% form_for Task.find(params[:id]) do |f| %>
@@ -10,3 +12,4 @@
     <%= f.submit 'Add time' %>
   </p>
 <% end %>
+</div>
