--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New task</h1>
-
+<div id="table_container">
 <% form_for(@task) do |f| %>
   <%= f.error_messages %>
 
@@ -14,3 +14,4 @@
 <% end %>
 
 <%= link_to 'Back', tasks_path %>
+</div>
