--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editing user</h1>
-
+<div id="table_container">
 <% form_for(@user) do |f| %>
   <%= f.error_messages %>
 
@@ -10,3 +10,4 @@
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
+</div>
