--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,5 @@
+<h1>Check out the task!</h1>
+<div id="table_container">
 <p>
   <b>Description:</b>
   <%=h @task.description %>
@@ -18,6 +20,6 @@
   <%=h @task.is_finished %>
 </p>
 
-
 <%= link_to 'Edit', edit_task_path(@task) %> |
 <%= link_to 'Back', tasks_path %>
+</div>
