last of the css cuties

--- a/app/views/tasks/fail.html.erb
+++ b/app/views/tasks/fail.html.erb
@@ -4,9 +4,8 @@
   }
 </script>
 
-<p>
-  <strong>ZOMG!  You failed to complete the task!</strong>
-</p>
+<h1><strong>ZOMG!  You failed to complete the task!</strong></h1>
+<div id="table_container">
 <p>
   You could try to break your original task down into smaller pieces <em>(ex. "clean up room" would turn into 1) clear desk 2) make the bed)</em>:
   <div>
@@ -29,3 +28,4 @@
 </p>
 
 <%= link_to 'Back', tasks_path %>
+</div>
