--- a/app/views/tasks/fail.html.erb
+++ b/app/views/tasks/fail.html.erb
@@ -7,7 +7,7 @@
 <h1><strong>ZOMG!  You failed to complete the task!</strong></h1>
 <div id="table_container">
 <p>
-  You could try to break your original task down into smaller pieces <em>(ex. "clean up room" would turn into 1) clear desk 2) make the bed)</em>:
+  You could try to break your original task, "<%= @task.description %>", down into smaller pieces <em>(ex. "clean up room" would turn into 1) clear desk 2) make the bed)</em>:
   <div>
     <% if flash[:error] %>
       <span id="errorExplanation"><%= flash[:error] %></span>
