added task observer scaffold, fixed functionality for adding more time using tasks_controller.update_duration

--- a/app/views/tasks/add_time.html.erb
+++ b/app/views/tasks/add_time.html.erb
@@ -2,7 +2,9 @@
 <div id="table_container">
 <p>How much time would YOU like to add?</p>
 
-<% form_for Task.find(params[:id]) do |f| %>
+<% form_for(@task, :url => update_duration_path(@task)) do |f| %>
+  <%= f.error_messages %>
+
   <p>
     <%= f.label 'Time to add (in min)' %>
     <%= f.text_field :added_time %>
