--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -42,7 +42,7 @@
   <tr>
     <th>Description</th>
     <th>Duration</th>
-    <th>Owner</th>
+    <th>Owner ID</th>
     <th>Finished?</th>
     <th>Time left</th>
     <th>Add time</th>
@@ -63,10 +63,11 @@
     <td>
       <% if task.is_finished %>
       -
-      <% elsif task.started_at %>  
-        <% if task.duration - Time.at(Time.now - task.started_at.to_time).min > 0 %>
+      <% elsif task.started_at %>
+        <% time_left = task.duration - Time.at(Time.now - task.started_at.to_time).min %>
+        <% if time_left > 0 %>
           <div id="timer<%=h task.id %>">
-            <%= task.duration - Time.at(Time.now - task.started_at.to_time).min %>
+            <%= time_left %>
           </div>
           <script type="text/javascript">startTimer('<%=h "timer" + task.id.to_s %>');</script>
         <% else %>
@@ -77,7 +78,7 @@
         <%= link_to 'Start', {:action => "start", :task_id => task.id} %>
       <% end %>
     </td>
-    <td><%= link_to 'Add time', add_time_path(task) %></td>
+    <td><%= task.is_finished? ? '-' : link_to('Add time', add_time_path(task)) %></td>
     <td><%= link_to 'Edit', edit_task_path(task) %></td>
     <td><%= link_to 'Delete', task, :confirm => 'Are you sure?', :method => :delete %></td>
     <td><input id="checkbox<%= task.id %>" type="checkbox" onclick="checkOff(<%=task.id%>)" <%= "checked disabled" if task.is_finished %> /></td>
