primitive filtering tasks by owner so upon login, you only see the tasks YOU created, more to come later

--- a/app/views/layouts/tasks.html.erb
+++ b/app/views/layouts/tasks.html.erb
@@ -12,7 +12,8 @@
 <link href='http://fonts.googleapis.com/css?family=Droid+Sans&subset=latin' rel='stylesheet' type='text/css'>
 
 <p style="color: green"><%= notice %></p>
-
+<%= "Current User: #{@current_user.login}" %>
+<%= link_to 'Log out', logout_path %>
 <%= yield %>
 
 </body>
