task controller cleaning

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <b>Owner:</b>
-  <%=h "#{@task.user_id} (#{@task.user.name})" %>
+  <%=h "#{@task.user_id} (#{@task.user.login})" %>
 </p>
 
 <p>
