split into 2 tasks

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -21,9 +21,11 @@
     taskDescription = $$('#taskEntry' + taskId + ' td')[0];
     if (taskDescription.className.indexOf('done') == -1) {
       taskDescription.className += ', done';
+      ajax_updater.stop();
     }
     else {
       taskDescription.className = taskDescription.className.replace('done', '');
+      ajax_updater.stop();
     }
   }
 </script>
