working on general layout

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -16,11 +16,11 @@
 
     <div id="masthead"><h1>ConstantWin</h1></div>
 
-    <%= render :partial => '/user_status' %>
+    <%= render :partial => '/users/user_bar' %>
 
   </div>
 
-  <%= render :partial => '/navigation' %>
+  <!--<%= render :partial => '/layouts/navigation' %>-->
 
   <div id="content">
 
@@ -38,7 +38,7 @@
 
   <div id="footer">
 
-    <p><tt>v0.9beta</tt>. Copyright &copy; the <a href="/about">ConstantWin team</a></p>
+    <p><tt>v0.01alpha</tt>. Created by the <a href="/about">ConstantWin team</a>.</p>
 
   </div>
 
