--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1,10 +1,13 @@
-html, body { margin: 0; padding: 0; font: 9pt verdana, sans-serif, arial; }
+html, body { margin: 0; padding: 0; background-color: #eee; font: 9pt verdana, sans-serif, arial; }
 /* layout divs */
-#wrapper { width: 800px; margin: 0px auto; border: 1px solid #ccc; }
-#header { border-bottom: 1px solid #ccc; }
-#masthead h1 { font: bold 18pt georgia, times }
-#userStatus { float: right; }
-#content { }
-#footer { border-top: 1px solid #ccc; }
+#wrapper { width: 800px; margin: -1px auto; border: 1px solid #ccc; background-color: #fff; }
+#header { padding: 0 10px; border-bottom: 1px solid #ccc; }
+#masthead h1 { font: bold 18pt georgia, times; }
+#userStatus { float: right; margin: -40px 20px 0 0; }
+#content { padding: 10px 20px; }
+#content h1 { margin-top: 0.5em; }
+#footer { padding: 0 10px; border-top: 1px solid #ccc; }
+#footer tt { background-color: #ffffcc; }
 /* html elements */
+h1, h2, h3 { font-family: georgia, times; }
 a { color: green; }
