--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -8,6 +8,8 @@ html, body { margin: 0; padding: 0; background-color: #eee; font: 9pt verdana, s
 #content h1 { margin-top: 0.5em; }
 #footer { padding: 0 10px; border-top: 1px solid #ccc; }
 #footer tt { background-color: #ffffcc; }
+/* specific elements */
+#flash_notice { border: 1px solid silver; background-color: #DFF2BF; padding: 0.3em; font: 10pt verdana; line-height: 1.3em; }
 /* html elements */
 h1, h2, h3 { font-family: georgia, times; }
 a { color: green; }
