--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -20,9 +20,13 @@
 
   </div>
 
-  <!--<%= render :partial => '/layouts/navigation' %>-->
-
-  <div id="content">
+	<% if false%> 
+	<!-- comment out below -->
+	<%= render :partial => '/layouts/navigation' %>
+	<!-- end comment -->
+	<%end%>
+  
+	<div id="content">
 
     <% if flash[:notice] %>
       <p id="flash_notice"><%= flash[:notice] %></p>
