--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -45,7 +45,10 @@
 </h1>
 <div id="table_container">
 <table id="tasksTable">
-  <tr>
+
+
+  <!--<tr>
+    <th>Finished?</th>
     <th>ID</th>
     <th>Description</th>
     <th>Owner ID</th>
@@ -53,24 +56,33 @@
     <th>Finished?</th>
     <th>Time left</th>
     <th>Add time</th>
-  </tr>
+  </tr>-->
 
 <% @tasks.each do |task| %>
+
   <tr id="taskEntry<%= task.id %>">
-    <td><%= task.id %></td>
+
+    <td><input id="checkbox<%= task.id %>" type="checkbox" onclick="checkOff(<%=task.id%>)" 
+	       <%= "checked" if task.is_finished %> <%= "disabled" if task.is_finished or task.started_at.nil? %>/></td>
+
+    <!--<td><%= task.id %></td>-->
+
     <td class="<%= task.is_finished ?  'done' : '' %>"><%=h task.description %></td>
-    <td><%=h task.user_id %></td>
-    <td><%=h task.duration %></td>
 
-    <td>
+    <!--<td><%=h task.user_id %></td>-->
+
+    <td><%=h task.duration %> min</td>
+
+    <!--<td>
       <% if task.is_finished %>
-        <div id="task_done"><br/></div>
+        <div class="task_done"><br/></div>
       <% else %>
-        <div id="task_not_done"><br/></div>
+        <div class="task_not_done"><br/></div>
       <% end %>
-    </td>
+    </td>-->
 
     <td>
+      &nbsp;
       <% if task.started_at.nil?%>
         <%= link_to 'Start', {:action => "start", :task_id => task.id} %>
       <% elsif task.is_finished? %>
@@ -81,14 +93,11 @@
       <% end %>
     </td>
 
-    <td><%= (task.started_at.nil? or task.is_finished?) ? '-' : link_to('Add time', add_time_path(task)) %></td>
+    <td><%= (task.started_at.nil? or task.is_finished?) ? '&nbsp;' : link_to('Add time', add_time_path(task)) %></td>
 
     <td><%= link_to 'Edit', edit_task_path(task) %></td>
 
     <td><%= link_to 'Delete', task, :confirm => 'Are you sure?', :method => :delete %></td>
-
-    <td><input id="checkbox<%= task.id %>" type="checkbox" onclick="checkOff(<%=task.id%>)" 
-	       <%= "checked" if task.is_finished %> <%= "disabled" if task.is_finished or task.started_at.nil? %>/></td>
 
   </tr>
 <% end %>
