--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -43,6 +43,14 @@
   Constant Win-->
   Listing tasks
 </h1>
+
+<% form_remote_tag(:controller => "tasks", :action => "create") do %>
+  <%= text_field_tag(:task_description, nil, :size => "30", :name => "task[description]") %>
+  <%= submit_tag("Add task") %>
+<% end %>
+
+<br />
+
 <div id="table_container">
 
 <%= render :partial => "task_list" %>
@@ -50,7 +58,7 @@
 <br />
 
 <p>
-<%= link_to 'New task', new_task_path %>
+<!--<%= link_to 'New task', new_task_path %>-->
 </p>
 
 </div>
