modified task list partial slightly

--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -21,7 +21,7 @@
 
     <!--<td><%= task.id %></td>-->
 
-    <td class="<%= task.is_finished ?  'done' : '' %>"><%=h task.description %></td>
+    <td class="<%= task.is_finished ?  'task_description, done' : 'task_description' %>"><%=h task.description %></td>
 
     <!--<td><%=h task.user_id %></td>-->
 
