--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,13 +5,13 @@
     var ajax_updater = new Ajax.PeriodicalUpdater(
       elementID,
       '/tasks/time_left/' + elementID.substring(5).toString(),
-      { method: 'get', frequency: 30, decay: 1 }
+      { method: 'get', frequency: 1, decay: 60 }
     );
     setInterval('checkTime("' + elementID.substring(5).toString() + '")', 5000);
   }
   function checkTime(taskId) {
-    var timeLeft = parseInt(document.getElementById('timer' + taskId).innerHTML);
-    if (timeLeft == 0) {
+    var timeLeft = (document.getElementById('timer' + taskId).innerHTML);
+    if (timeLeft.match(/(\d+)(?::(\d\d))?\s*(p?)/)[0] == "0:00") {
       fail(taskId);
     }
   }
@@ -82,7 +82,6 @@
     </td>-->
 
     <td>
-      &nbsp;
       <% if task.started_at.nil?%>
         <%= link_to 'Start', {:action => "start", :task_id => task.id} %>
       <% elsif task.is_finished? %>
