--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -6,7 +6,9 @@
   <title>ConstantWin / <%= yield(:title) %></title>
   <!-- TODO: Add default JavaScript and CSS tags -->
   <%= stylesheet_link_tag 'base' %>
-  <!--<%= javascript_include_tag 'jquery-1.4.3.min' %>-->
+  <%= javascript_include_tag 'jquery-1.4.3.min' %>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.6/jquery-ui.min.js"></script>
+  <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag 'base' %>
 </head><body>
