--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -25,7 +25,7 @@
 
     <!--<td><%=h task.user_id %></td>-->
 
-    <td><%=h task.duration %> min</td>
+    <td id="duration"><%=h task.duration %> min</td>
 
     <!--<td>
       <% if task.is_finished %>
