--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -8,12 +8,21 @@
       { method: 'get', frequency: 30, decay: 1 }
     );
     setInterval('checkTime("' + elementID.substring(5).toString() + '")', 5000);
+    setInterval('updateProgressBar("'+elementID.substring(5).toString()+'")',100);
   }
+
+  function updateProgressBar(taskId) {
+    var timeLeft = checkTime(taskId);
+    var totalTime = parseInt(jQuery("#taskEntry"+taskId+">td#duration").html());
+    jQuery("#progressbar").progressbar({value: ((totalTime - timeLeft)/totalTime) * 100});
+  }
+
   function checkTime(taskId) {
     var timeLeft = parseInt(document.getElementById('timer' + taskId).innerHTML);
     if (timeLeft == 0) {
       fail(taskId);
     }
+    return timeLeft;
   }
   function fail(taskId) {
     window.location = '/tasks/fail/' + taskId;
@@ -47,7 +56,7 @@
     });
     //Event.observe('signinForm', 'submit', checkForm);
   });
- 
+
 </script>
 
 <style type="text/css">
@@ -78,5 +87,10 @@
 <!--<%= link_to 'New task', new_task_path %>-->
 </p>
 
+<% @active_task = Task.find(:all, :conditions => {:active_task => true}) %>
+<% if @active_task %>
+<% end %>
+
+<div id="progressbar"></div>
 </div>
 
