--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -20,7 +20,7 @@
 
   <div id="header">
 
-    <div id="masthead"><h1>ConstantWin</h1></div>
+    <div id="masthead"><a href="/"><h1>ConstantWin</h1></a></div>
 
     <%= render :partial => '/users/user_bar' %>
 
