--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -49,9 +49,9 @@
 
     <td><%= (task.started_at.nil? or task.is_finished?) ? '&nbsp;' : link_to('Add time', add_time_path(task)) %></td>
 
-    <td><%= link_to 'Edit', edit_task_path(task) %></td>
+    <noscript><td><%= link_to 'Edit', edit_task_path(task) %></td></noscript>
 
-    <td><%= link_to 'Delete', task, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to image_tag("cross.png", :border=>0, :alt=>'Delete task', :title=>'Delete task'), task, :confirm => 'Are you sure?', :method => :delete %></td>
 
   </tr>
 <% end %>
